<resources>
    <string name="app_name">Preparación</string>
    <string name="Búsqueda"></string>
    <string name="tx1">Comparan Cyberpunk 2077 entre la version de PS4 Pro y PC:</string>
    <string name="tx2">Ayer mismo recibíamos un nuevo gameplay de Cyberpunk 2077  corriendo en las consolas de…</string>
    <string name="tx3">Vida Extra . Hace 5 horas</string>
    <string name="tx5">Una investigación de la Oficina Nacional de Estadística del Reino Unido ha revelado el sint…</string>
    <string name="tx4">Los investigadores revelan el síntoma más común del coronavirus</string>
    <string name="tx6">CNN . Hace 14 horas</string>
    <string name="tx7">Discover</string>
    <string name="tx8">Vista</string>
    <string name="tx9">Buscar</string>
    <string name="tx10">Colecciones</string>
    <string name="tx11">Más</string>
</resources>