<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="91dp"
                app:srcCompat="@drawable/titulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/lupa" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Búsqueda"/>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/micro" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cyber" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/black"
                    android:text="@string/tx1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/tx2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/vx" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="314dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/tx3" />
                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/corazon" />
                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/web" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tx4"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tx5" />

                </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/covid" />
            </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/cnn" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="314dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/tx6" />

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/corazon" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/web" />

                    </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cyber" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/black"
                    android:text="@string/tx1" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/tx2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/vx" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="314dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/tx3" />
                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/corazon" />
                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/web" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/abajo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/asterisco" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ojo" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/lupa2" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/col" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/puntos" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#424141"
            android:text="@string/tx7" />
        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#424141"
            android:text="@string/tx8" />
        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:text="@string/tx9" />
        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#424141"
            android:text="@string/tx10" />
        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#424141"
            android:text="@string/tx11" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
